chore: update release setup